@@ -1,3 +1,7 @@
+2014-10-19 Erik Hetzner <egh@e6h.org>
+	* pces-20.el: Only check for broken insert-file-contents-literally
+	when literal-test-file is writable.
+
 2014-06-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mcs-20.el (detect-mime-charset-from-coding-system): (Emacs23 and
